Added Api RefreshTest and changed swagger documentstion
